adding the last version of graphtea as a base